Use ZGC garbage collector to run the app (not supported for native binaries)